<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:columnCount="4"
    android:rowCount="7"

    android:orientation="horizontal"
    android:background="#fbfcfb"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="0dp"
    android:layout_marginTop="2dp"
    android:layout_alignParentBottom="false"
    tools:context=".MainActivity">

    <Button android:text="@string/txta2"
        android:textSize="@dimen/font_size"
        android:background="#fb6d6d"
        android:id="@+id/btna"
        android:textAllCaps="false"
        />
    <Button android:text="@string/txtb2"
        android:textSize="@dimen/font_size"
        android:background="#9afb6d6d"
        android:textAllCaps="false"
        android:id="@+id/btnb" />
    <Button android:text="@string/txtc2"
        android:textSize="@dimen/font_size"
        android:background="#fb6d6d"
        android:textAllCaps="false"
        android:id="@+id/btnc" />
    <Button android:text="@string/txtd2"
        android:textSize="@dimen/font_size"
        android:background="#9afb6d6d"
        android:textAllCaps="false"
        android:id="@+id/btnd" />
    <Button android:text="@string/txte2"
        android:textSize="@dimen/font_size"
        android:background="#fbc67c"
        android:textAllCaps="false"
        android:id="@+id/btne"/>
    <Button android:text="@string/txtf2"
        android:textSize="@dimen/font_size"
        android:background="#a0fbc67c"
        android:textAllCaps="false"
        android:id="@+id/btnf"/>
    <Button android:text="@string/txtg2"
        android:textSize="@dimen/font_size"
        android:background="#fbc67c"
        android:textAllCaps="false"
        android:id="@+id/btng"/>
    <Button android:text="@string/txth2"
        android:textSize="@dimen/font_size"
        android:background="#a0fbc67c"
        android:textAllCaps="false"
        android:id="@+id/btnh"/>
    <Button android:text="@string/txti2"
        android:textSize="@dimen/font_size"
        android:background="#fbf085"
        android:textAllCaps="false"
        android:id="@+id/btni"/>
    <Button android:text="@string/txtj2"
        android:textSize="@dimen/font_size"
        android:background="#a2fbef85"
        android:textAllCaps="false"
        android:id="@+id/btnj"/>
    <Button android:text="@string/txtk2"
        android:textSize="@dimen/font_size"
        android:background="#fbf085"
        android:textAllCaps="false"
        android:id="@+id/btnk"/>
    <Button android:text="@string/txtl2"
        android:textSize="@dimen/font_size"
        android:background="#a2fbef85"
        android:textAllCaps="false"
        android:id="@+id/btnl"/>

    <Button android:text="@string/txtm2"
        android:textSize="@dimen/font_size"
        android:background="#b2faa2"
        android:textAllCaps="false"
        android:id="@+id/btnm"/>
    <Button android:text="@string/txtn2"
        android:textSize="@dimen/font_size"
        android:background="#a6b2faa2"
        android:textAllCaps="false"
        android:id="@+id/btnn"/>
    <Button android:text="@string/txto2"
        android:textSize="@dimen/font_size"
        android:background="#b2faa2"
        android:textAllCaps="false"
        android:id="@+id/btno"/>
    <Button android:text="@string/txtp2"
        android:textSize="@dimen/font_size"
        android:background="#a6b2faa2"
        android:textAllCaps="false"
        android:id="@+id/btnp"/>
    <Button android:text="@string/txtq2"
        android:textSize="@dimen/font_size"
        android:background="#7ce5fa"
        android:textAllCaps="false"
        android:id="@+id/btnq"/>
    <Button android:text="@string/txtr2"
        android:textSize="@dimen/font_size"
        android:background="#aa7ce5fa"
        android:textAllCaps="false"
        android:id="@+id/btnr"/>
    <Button android:text="@string/txts2"
        android:textSize="@dimen/font_size"
        android:background="#7ce5fa"
        android:textAllCaps="false"
        android:id="@+id/btns"/>
    <Button android:text="@string/txtt2"
        android:textSize="@dimen/font_size"
        android:background="#aa7ce5fa"
        android:textAllCaps="false"
        android:id="@+id/btnt"/>
    <Button android:text="@string/txtu2"
        android:textSize="@dimen/font_size"
        android:background="#b3a8f6"
        android:textAllCaps="false"
        android:id="@+id/btnu"/>
    <Button android:text="@string/txtv2"
        android:textSize="@dimen/font_size"
        android:background="#adb2a8f6"
        android:textAllCaps="false"
        android:id="@+id/btnv"/>
    <Button android:text="@string/txtw2"
        android:textSize="@dimen/font_size"
        android:background="#b3a8f6"
        android:textAllCaps="false"
        android:id="@+id/btnw"/>
    <Button android:text="@string/txtx2"
        android:textSize="@dimen/font_size"
        android:background="#adb2a8f6"
        android:textAllCaps="false"
        android:id="@+id/btnx"/>

    <Button android:text="@string/test"
        android:textSize="@dimen/font_size"
        android:background="#e870f5"
        android:textAllCaps="false"
        android:id="@+id/btntest"/>

    <Button android:text="@string/txty2"
        android:textSize="@dimen/font_size"
        android:background="#a6e870f5"
        android:textAllCaps="false"
        android:id="@+id/btny"/>

    <Button android:text="@string/txtz2"
        android:textSize="@dimen/font_size"
        android:background="#e870f5"
        android:textAllCaps="false"
        android:id="@+id/btnz"/>

    <Button android:text="@string/abc"
        android:textSize="@dimen/font_size"
        android:background="#a6e870f5"
        android:textAllCaps="false"
        android:id="@+id/btnBig"/>

</GridLayout>